= Changelog

== 0.8.3 - unreleased

* Konnektor: Buttons für Reboot und Connectivity-Check jetzt auch auf der Übersichtsseite der Konnektoren
* `fping` statt `ping` für Verbindungstests (robuster und schneller bei Erreichbarkeit)

== 0.8.2 - 2025-06-28

* ObjectSystemVersion einer Karte. SMC-B, HBA und gSMC-KT mit einer ObjectSystemVersion < 4.4.0 sind RSA only, HBAs dürfen für die QES ab 01.01.2026 nur noch ECC verwenden. Bei nonQES-Verfahren gilt eine Duldung bis Ende 2026.
* Dokumentation für Karte und Tags ergänzt

== 0.8.1 - 2025-06-07

* Kartenterminal: Firmwareversion ins Formular mit aufgenommen für manuellen 
  Eintrag bei mobilen Kartenterminals
* Tags für die objekt-übergreifende Kennzeichnung
* Fix: Standort bei Karten wird nicht mehr überschrieben, wenn dem Kartenterminal kein Standort zugewiesen ist.

== 0.8.0 - 2025-05-13

* Authentifikation gegen LDAP parallel zur lokalen Datenbank
* Benutzeranlage mit Vorlage aus einem LDAP-Verzeichnisdienst
* Upgrade auf Ruby 3.3

== 0.7.8 - 2025-05-08

* Fix: Der Wechsel einer Karte von einem Slot zu einem anderen (oder auch anderem Kartenterminal) wird jetzt korrekt dargestellt.
* `last_check` für Karten und Terminals (letztes Auffinden über den Konnektor)
* Hintergrundjob für das Aufräumen bei abgelaufenen Acknowledges insbesondere
für Objekte, die aus anderen Gründen nicht mehr aktualisiert werden.
* Reset-Button bei Karten zum Löschen der Zuordnung zum Kartenterminals insbesondere für außer Betrieb genommene Karten.
* Soft delete für Karten: _Löschen_ versteckt die Karte, löscht sie aber nicht vollends aus der Datenbank. Über den Menüeintrag _Gelöschte Karten_ können diese Karten weiter eingesehen werden. Karten, die vor diesem Release gelöscht wurden, sind dauerhaft gelöscht.

== 0.7.7 - 2025-05-04

* Fix: Karten mit abgelaufenen Acknowledges werden wieder korrekt im Dashboard angezeigt
* Suche nach abgelaufenen und nicht mehr benutzten Karten