@@ -227,7 +227,10 @@
 <p>Konnektor: Buttons für Reboot und Connectivity-Check jetzt auch auf der Übersichtsseite der Konnektoren</p>
 </li>
 <li>
-<p><code>fping</code> statt <code>ping</code> für Verbindungstests (robuster und schneller)</p>
+<p><code>fping</code> statt <code>ping</code> für Verbindungstests (robuster und schneller bei Erreichbarkeit)</p>
+</li>
+<li>
+<p>Kartenterminal: Reset-Button zum einfacheren Löschen der Konnektor-Verbindung (wenn Kartenterminal != OK)</p>
 </li>
 </ul>
 </div>
